WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59799
[Gtk+] Crash when navigating back
https://bugs.webkit.org/show_bug.cgi?id=59799
Summary
[Gtk+] Crash when navigating back
Jonathon Jongsma (jonner)
Reported
2011-04-29 09:25:59 PDT
Created
attachment 91689
[details]
stack trace From time to time, when I click 'back', epiphany crashes. I've finally managed to get a trace, which I've attached below: Program received signal SIGSEGV, Segmentation fault. 0x00007ffff264f0f8 in g_object_unref (_object=0x1d96520) at /tmp/buildd/glib2.0-2.28.6/./gobject/gobject.c:2668 2668 /tmp/buildd/glib2.0-2.28.6/./gobject/gobject.c: No such file or directory. in /tmp/buildd/glib2.0-2.28.6/./gobject/gobject.c See attachment for full trace, the offending thread is Thread 1.
Attachments
stack trace
(87.63 KB, text/plain)
2011-04-29 09:25 PDT
,
Jonathon Jongsma (jonner)
no flags
Details
Patch
(1.74 KB, patch)
2011-04-29 13:28 PDT
,
Xan Lopez
no flags
Details
Formatted Diff
Diff
Patch
(3.07 KB, patch)
2011-04-29 21:27 PDT
,
Xan Lopez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2011-04-29 13:28:47 PDT
Created
attachment 91724
[details]
Patch
Martin Robinson
Comment 2
2011-04-29 13:46:43 PDT
Comment on
attachment 91724
[details]
Patch Okay. Might be good to migrates this stuff to GRefPtrs now that the reference counting is normalized. You expected me to say that though. :)
Xan Lopez
Comment 3
2011-04-29 21:27:11 PDT
Created
attachment 91797
[details]
Patch
Xan Lopez
Comment 4
2011-04-29 21:32:41 PDT
(In reply to
comment #3
)
> Created an attachment (id=91797) [details] > Patch
As you wish. Same patch, now with 100% more GRefPtrs.
Martin Robinson
Comment 5
2011-04-29 22:02:25 PDT
Comment on
attachment 91797
[details]
Patch Sorry, I meant in a followup patch, but this is great. Thanks!
Xan Lopez
Comment 6
2011-04-29 22:20:35 PDT
Comment on
attachment 91797
[details]
Patch Clearing flags on attachment: 91797 Committed
r85390
: <
http://trac.webkit.org/changeset/85390
>
Xan Lopez
Comment 7
2011-04-29 22:21:08 PDT
All reviewed patches have been landed. Closing bug.
Priit Laes (IRC: plaes)
Comment 8
2011-05-07 00:26:35 PDT
***
Bug 56834
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug