2011-04-29  Xan Lopez  <xlopez@igalia.com>

Reviewed by Martin Robinson.

        [Gtk+] Crash when navigating back
        https://bugs.webkit.org/show_bug.cgi?id=59799

        The innerNode management in WebKitHitTestResult was relying on the
        old DOM bindings behavior where every DOM objects had to be
        disposed by the caller. Now the objects are garbage collected by
        WebKit when either the parent frame or document dies, so this is
        not needed anymore. Update the code to simply take ownership of
        the node, which effectively correctly balances the reference
        count.

        * webkit/webkithittestresult.cpp:
        (webkit_hit_test_result_dispose): call C++ dtors in private data.
        (webkit_hit_test_result_get_property): adatp to GRefPtr API.
        (webkit_hit_test_result_init): call C++ ctors in private data.

git-svn-id: svn://svn.chromium.org/blink/trunk@85390 bbb929c8-8fbe-4397-9dbb-9b2b20218538